--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
+  "engines": {
+    "node": "6.11.1"
+  },
   "dependencies": {
+    "@react-pdf/renderer": "^2.0.17",
     "bootstrap": "^4.5.0",
+    "file-saver": "^2.0.5",
     "gatsby": "^2.23.7",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-manifest": "^2.4.12",
@@ -26,12 +31,15 @@
     "gatsby-transformer-sharp": "^2.5.5",
     "nanoid": "^3.1.10",
     "node-sass": "^4.14.1",
+    "nodemon": "^2.0.13",
+    "pdfkit": "^0.12.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-github-btn": "^1.2.0",
     "react-helmet": "^6.1.0",
+    "react-pdf": "^5.3.2",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
     "react-tilt": "^0.1.4"
