--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "node": "6.11.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.3",
     "@react-pdf/renderer": "^2.0.17",
     "bootstrap": "^4.5.0",
     "file-saver": "^2.0.5",
