update: first project

--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "file-saver": "^2.0.5",
     "gatsby": "^2.23.7",
     "gatsby-image": "^2.4.7",
+    "gatsby-plugin-image": "^2.11.1",
     "gatsby-plugin-manifest": "^2.4.12",
     "gatsby-plugin-offline": "^3.2.11",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sass": "^2.3.4",
-    "gatsby-plugin-sharp": "^2.6.12",
-    "gatsby-source-filesystem": "^2.3.12",
-    "gatsby-transformer-sharp": "^2.5.5",
+    "gatsby-plugin-sharp": "^2.14.4",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-sharp": "^2.12.1",
     "nanoid": "^3.1.10",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.13",
